--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/yangmillstheory/generator-redux-module#readme",
   "dependencies": {
-    "yeoman-generator": "^1.1.0"
+    "chalk": "^1.1.3",
+    "yeoman-generator": "^1.1.0",
+    "yosay": "^1.2.1"
   },
   "peerDependencies": {
     "redux": "^3.6.0",
