--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/yangmillstheory/generator-redux-module#readme",
   "dependencies": {
     "chalk": "^1.1.3",
+    "lodash.camelcase": "^4.3.0",
     "yeoman-generator": "^1.1.0",
     "yosay": "^1.2.1"
   },
