--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-redux-module",
+  "name": "generator-redux-actions",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -13,18 +13,22 @@
     "generators"
   ],
   "keywords": [
+    "redux",
+    "es6",
+    "redux actions",
+    "flux standard action",
     "yeoman-generator"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yangmillstheory/generator-redux-module.git"
+    "url": "git+https://github.com/yangmillstheory/generator-redux-actions.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yangmillstheory/generator-redux-module/issues"
+    "url": "https://github.com/yangmillstheory/generator-redux-actions/issues"
   },
-  "homepage": "https://github.com/yangmillstheory/generator-redux-module#readme",
+  "homepage": "https://github.com/yangmillstheory/generator-redux-actions#readme",
   "dependencies": {
     "chalk": "^1.1.3",
     "lodash.camelcase": "^4.3.0",
